iosevkat: Update build plans

--- a/iosevkat-fonts/private-build-plans.toml
+++ b/iosevkat-fonts/private-build-plans.toml
@@ -1,30 +1,8 @@
-# Sans
-[buildPlans.Iosevkat]
-family = "Iosevkat"
-desc = "Default"
-buildCharMap = true
-snapshotFamily = 'Iosevkat'
-snapshotFeature = {"NWID" = 0}
-exportGlyphNames = true
-
-[buildPlans.Iosevkat.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.Iosevkat.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
 [buildPlans.IosevkatTerm]
 family = "Iosevkat Term"
 spacing = "term"
-snapshotFamily = 'Iosevkat'
-snapshotFeature = {"NWID" = 1}
 exportGlyphNames = true
+slopes.inherits = "default"
 
 [buildPlans.IosevkatTerm.slopes.Oblique]
 angle = 9
@@ -33,218 +11,6 @@ menu  = "oblique"
 css   = "oblique"
 
 [buildPlans.IosevkatTerm.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-[buildPlans.IosevkatFixed]
-family = "Iosevkat Fixed"
-spacing = "fixed"
-snapshotFamily = 'Iosevkat'
-snapshotFeature = {"NWID" = 1}
-exportGlyphNames = true
-
-[buildPlans.IosevkatFixed.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatFixed.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-# Slab
-[buildPlans.IosevkatSlab]
-family = "Iosevkat Slab"
-desc = "Slab-serif"
-buildCharMap = true
-serifs = "slab"
-snapshotFamily = 'Iosevkat Slab'
-snapshotFeature = {"NWID" = 0}
-exportGlyphNames = true
-
-[buildPlans.IosevkatSlab.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatSlab.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-[buildPlans.IosevkatTermSlab]
-family = "Iosevkat Term Slab"
-serifs = "slab"
-spacing = "term"
-snapshotFamily = 'Iosevkat Slab'
-snapshotFeature = {"NWID" = 1}
-exportGlyphNames = true
-
-[buildPlans.IosevkatTermSlab.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatTermSlab.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-[buildPlans.IosevkatFixedSlab]
-family = "Iosevkat Fixed Slab"
-serifs = "slab"
-spacing = "fixed"
-snapshotFamily = 'Iosevkat Slab'
-snapshotFeature = {"NWID" = 1}
-exportGlyphNames = true
-
-[buildPlans.IosevkatFixedSlab.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatFixedSlab.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-# Curly
-[buildPlans.IosevkatCurly]
-family  = "Iosevkat Curly"
-desc = "Curly Style"
-snapshotFamily = 'Iosevkat'
-snapshotFeature = {"ss20" = 1}
-exportGlyphNames = true
-[buildPlans.IosevkatCurly.variants]
-inherits = "ss20"
-
-[buildPlans.IosevkatCurly.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatCurly.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-[buildPlans.IosevkatTermCurly]
-family  = "Iosevkat Term Curly"
-spacing = "term"
-snapshotFamily = 'Iosevkat'
-snapshotFeature = {"NWID" = 1, "ss20" = 1}
-exportGlyphNames = true
-[buildPlans.IosevkatTermCurly.variants]
-inherits = "ss20"
-
-[buildPlans.IosevkatTermCurly.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatTermCurly.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-[buildPlans.IosevkatFixedCurly]
-family  = "Iosevkat Fixed Curly"
-spacing = "fixed"
-snapshotFamily = 'Iosevkat'
-snapshotFeature = {"NWID" = 1, "ss20" = 1}
-exportGlyphNames = true
-[buildPlans.IosevkatFixedCurly.variants]
-inherits = "ss20"
-
-[buildPlans.IosevkatFixedCurly.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatFixedCurly.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-# Curly Slab
-[buildPlans.IosevkatCurlySlab]
-family  = "Iosevkat Curly Slab"
-desc = "Curly Style, Slab-serif"
-serifs = "slab"
-snapshotFamily = 'Iosevkat Slab'
-snapshotFeature = {"ss20" = 1}
-exportGlyphNames = true
-[buildPlans.IosevkatCurlySlab.variants]
-inherits = "ss20"
-
-[buildPlans.IosevkatCurlySlab.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatCurlySlab.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-[buildPlans.IosevkatTermCurlySlab]
-family  = "Iosevkat Term Curly Slab"
-serifs = "slab"
-spacing = "term"
-snapshotFamily = 'Iosevkat Slab'
-snapshotFeature = {"NWID" = 1, "ss20" = 1}
-exportGlyphNames = true
-[buildPlans.IosevkatTermCurlySlab.variants]
-inherits = "ss20"
-
-[buildPlans.IosevkatTermCurlySlab.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatTermCurlySlab.slopes.Italic]
-angle = 9
-shape = "italic"
-menu  = "italic"
-css   = "italic"
-
-[buildPlans.IosevkatFixedCurlySlab]
-family  = "Iosevkat Fixed Curly Slab"
-serifs = "slab"
-spacing = "fixed"
-snapshotFamily = 'Iosevkat Slab'
-snapshotFeature = {"NWID" = 1, "ss20" = 1}
-exportGlyphNames = true
-[buildPlans.IosevkatFixedCurlySlab.variants]
-inherits = "ss20"
-
-[buildPlans.IosevkatFixedCurlySlab.slopes.Oblique]
-angle = 9
-shape = "oblique"
-menu  = "oblique"
-css   = "oblique"
-
-[buildPlans.IosevkatFixedCurlySlab.slopes.Italic]
 angle = 9
 shape = "italic"
 menu  = "italic"
