--- a/iosevkat-fonts/private-build-plans.toml
+++ b/iosevkat-fonts/private-build-plans.toml
@@ -1,8 +1,20 @@
 [buildPlans.IosevkatTerm]
 family = "Iosevkat Term"
 spacing = "term"
+serifs = "sans"
+noCvSs = false
 exportGlyphNames = true
-slopes.inherits = "default"
+
+[buildPlans.Iosevkat.weights.Regular]
+shape = 400
+menu = 400
+css = 400
+
+[buildPlans.IosevkatTerm.slopes.Upright]
+angle = 0
+shape = "upright"
+menu  = "upright"
+css   = "normal"
 
 [buildPlans.IosevkatTerm.slopes.Oblique]
 angle = 9
