--- a/iosevkat-fonts/private-build-plans.toml
+++ b/iosevkat-fonts/private-build-plans.toml
@@ -1,44 +1,39 @@
-[buildPlans.IosevkatTerm]
-family = "Iosevkat Term"
+[buildPlans.Iosevkat]
+Jfamily = "Iosevkat"
 spacing = "term"
 serifs = "sans"
 noCvSs = false
 exportGlyphNames = true
 
-[buildPlans.IosevkatTerm.weights.Regular]
+[buildPlans.Iosevkat.weights.Regular]
 shape = 400
 menu = 400
 css = 400
 
-[buildPlans.IosevkatTerm.weights.Bold]
+[buildPlans.Iosevkat.weights.Bold]
 shape = 700
 menu = 700
 css = 700
 
-[buildPlans.IosevkatTerm.widths.Normal]
+[buildPlans.Iosevkat.widths.Normal]
 shape = 500
 menu = 5
 css = "normal"
 
-[buildPlans.IosevkatTerm.slopes.Upright]
+[buildPlans.Iosevkat.slopes.Upright]
 angle = 0
 shape = "upright"
 menu  = "upright"
 css   = "normal"
 
-[buildPlans.IosevkatTerm.slopes.Oblique]
-angle = 5
+[buildPlans.Iosevkat.slopes.Oblique]
+angle = 9
 shape = "oblique"
 menu  = "oblique"
 css   = "oblique"
 
-[buildPlans.IosevkatTerm.slopes.Italic]
-angle = 5
+[buildPlans.Iosevkat.slopes.Italic]
+angle = 9
 shape = "italic"
 menu  = "italic"
 css   = "italic"
-
-[buildPlans.IosevkatTerm.metricOverride]
-sb = 'default_sb * 2'
-powerlineScaleX = 0.5
-powerlineShiftY = 4000
